# freelance-proposal-analyzer

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: analysis.py
app/core/: config.py  exceptions.py  logging.py  schemas.py
app/infra/database/: connection.py  models.py
app/repositories/: analysis_repository.py
app/services/: analyzer_service.py
app/static/: index.html
tests/: conftest.py  test_analysis.py
